# analyzer

./: .gitignore  carter.py  chart.py  chin.py  dev.py  pyproject.toml  results.py  rhythm_analyze.py  salami_slice.py  salami_slice_analyze.py  schutz.py  staff_analyze.py
src/analyzer/: results.py  rhythm_analyze.py  salami_slice_analyze.py
tests/: test_integration_scores.py  test_slicer.py  test_slicer_components.py
tests/data/: test1.musicxml  test2.musicxml  test3.musicxml  test4.musicxml  test5.musicxml  test_carter1.musicxml  test_carter2.musicxml  test_carter3.musicxml  test_carter4.musicxml
